Update README: add JVM flag details and fix Typst examples